tests/NormalTests/paczka1/fuzzy1/30488920.err
Error in line 2: 8hYi68Lgau S597 87,0
Error in line 12: 8hYi68Lgau A866 36,7
Error in line 14: Qm7yabX A980 27,7
Error in line 20: Qm7yabX A866 50,6
Error in line 28: S597 A310 57,8
Error in line 33: S597 A980 20,5
